--- a/components/header.html
+++ b/components/header.html
@@ -4,6 +4,16 @@
         <img style="width: 200px; height: 100px" src="/ISE_Web/assets/header-logo.png" alt="Logo Khoa KH-KTTT">
     </a>
     
+    <!-- Nút hamburger cho mobile -->
+    <button class="hamburger-menu" aria-label="Menu" aria-expanded="false">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    
+    <!-- Overlay cho mobile menu -->
+    <div class="mobile-menu-overlay"></div>
+    
     <!-- Thanh điều hướng -->
     <div class="rHeader">
         <ul class="navbar">
